--- a/src/pages/styles.module.css
+++ b/src/pages/styles.module.css
@@ -14,12 +14,6 @@
   min-height: 70vh;
 }
 
-@media screen and (max-width: 966px) {
-  .heroBanner {
-    padding: 2rem;
-  }
-}
-
 .buttons {
   display: flex;
   align-items: center;
@@ -44,4 +38,32 @@
 
 .responsiveCentered {
   text-align: center;
+}
+
+/* NOTE(matija): it is important that this element is last! That way it overrides
+ * the properties from above, otherwise it would get overriden since the properties above
+ * are general. */
+
+/* TODO(matija): there is probably a better way of doing this, I don't like being dependent on
+ * the property order.*/
+@media screen and (max-width: 966px) {
+  .heroBanner {
+    padding: 2rem;
+  }
+
+  .buttons {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .buttons > *:not(:first-child) {
+    /* NOTE(matija): this is here to counter margin-left from above, the general case. Terrible, I know. */  
+    margin-left: 0;
+
+    margin-top: 1rem;
+  }
+
+  .heroButton {
+    width: 100%;
+  }
 }
